--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Nikolay Balkandzhiyski",
-            "email": "your-email@example.com"
+            "email": "nikolay.balkandzhiyski@gmail.com"
         }
     ],
     "require": {
@@ -52,8 +52,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
-            "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
-            "@php artisan migrate --graceful --ansi"
+            "@php artisan blade-kit:install",
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
