Add application structure and enhance Composer scripts
- Introduced ComposerScripts class to handle post-autoload-dump events and improved error handling for Artisan commands.
- Added CreateApplication class to ensure a basic application structure is created during installation.
- Updated ServiceProvider to conditionally register commands based on the presence of a Laravel application.
- Enhanced StarterKit installation process to create necessary directories and files for a new application.
- Added Environment helper class to determine execution context (Laravel application vs package).

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     },
     "autoload": {
         "psr-4": {
-            "NikolayBalkandzhiyski\\BladeStarterKit\\": "src/"
+            "NikolayBalkandzhiyski\\BladeStarterKit\\": "src/",
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
@@ -41,18 +42,17 @@
     },
     "scripts": {
         "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "NikolayBalkandzhiyski\\BladeStarterKit\\ComposerScripts::postAutoloadDump"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php -r \"file_exists('./artisan') && exec('php artisan vendor:publish --tag=laravel-assets --ansi --force')\""
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi",
-            "@php artisan blade-kit:install",
+            "@php -r \"file_exists('./artisan') && exec('php artisan key:generate --ansi')\"",
+            "@php -r \"file_exists('./artisan') && exec('php artisan blade-kit:install')\"",
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "dev": [
