Refactor Blade Starter Kit installation and Composer scripts
- Changed project type in composer.json to 'laravel-starter-kit' for clarity.
- Enhanced ComposerScripts to skip Laravel operations during composer updates in non-Laravel contexts.
- Improved error handling in ServiceProvider for command registration.
- Updated StarterKit to ensure application structure and append routes safely.
- Modified InstallCommand to include structured error handling and ensure application structure during installation.
- Adjusted CSS stubs to use Tailwind's preflight for better styling consistency.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
     "name": "nikolaybalkandzhiyski/laravel-12-blade-starter-kit",
-    "type": "project",
+    "type": "laravel-starter-kit",
     "description": "A Laravel 12 starter kit with Blade templates and authentication",
     "keywords": [
         "laravel",
@@ -31,8 +31,7 @@
     },
     "autoload": {
         "psr-4": {
-            "NikolayBalkandzhiyski\\BladeStarterKit\\": "src/",
-            "App\\": "app/"
+            "NikolayBalkandzhiyski\\BladeStarterKit\\": "src/"
         }
     },
     "autoload-dev": {
@@ -44,9 +43,6 @@
         "post-autoload-dump": [
             "NikolayBalkandzhiyski\\BladeStarterKit\\ComposerScripts::postAutoloadDump"
         ],
-        "post-update-cmd": [
-            "@php -r \"file_exists('./artisan') && exec('php artisan vendor:publish --tag=laravel-assets --ansi --force')\""
-        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
@@ -54,10 +50,6 @@
             "@php -r \"file_exists('./artisan') && exec('php artisan key:generate --ansi')\"",
             "@php -r \"file_exists('./artisan') && exec('php artisan blade-kit:install')\"",
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "dev": [
-            "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ]
     },
     "extra": {
