--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
     "name": "nikolaybalkandzhiyski/laravel-12-blade-starter-kit",
-    "type": "laravel-starter-kit",
+    "type": "library",
     "description": "A Laravel 12 starter kit with Blade templates and authentication",
     "keywords": [
         "laravel",
@@ -18,7 +18,8 @@
     ],
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0"
+        "illuminate/support": "^12.0",
+        "illuminate/filesystem": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
